# red-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  addModules.py  appveyor.yml  redengine.lua  redengine.sublime-project
engine/: CMakeLists.txt  compile.cpp
engine/include/RedEngine/: Application.hpp  Configuration.hpp  Engine.hpp  EngineConfig.hpp  Platform.hpp  RedEngineBase.hpp  Window.hpp
engine/include/RedEngine/Application/: Application.hpp
engine/include/RedEngine/Audio/: AudioEvent.hpp  AudioModule.hpp  AudioUtils.hpp
engine/include/RedEngine/Core/: Application.hpp  CoreModule.hpp  Engine.hpp  EngineConfig.hpp  Macros.hpp  SerializationFunction.hpp  SubEngine.hpp
engine/include/RedEngine/Event/: EventSystem.hpp  Signal.hpp
engine/include/RedEngine/Filesystem/: File.hpp  Path.hpp
engine/include/RedEngine/Input/: InputDefinition.hpp  InputDefinitionTranslationUnit.hpp  InputManager.hpp  UserInputDefinition.hpp
engine/include/RedEngine/Level/: JsonLevelData.hpp  JsonLevelLoader.hpp  JsonLevelNames.hpp  JsonLevelSerializer.hpp  Level.hpp  LevelChunk.hpp  LevelData.hpp  LevelLoader.hpp  LevelManager.hpp  LevelResourceLoader.hpp  LevelSerializer.hpp
engine/include/RedEngine/Math/: AABB.hpp  Hash.hpp  Math.hpp  Matrix.hpp  MatrixFunction.hpp  MatrixFunctions.hpp  Point.hpp  SerializationFunction.hpp  Vector.hpp
engine/include/RedEngine/Memory/: MemoryManager.hpp  MemoryProfiler.hpp
engine/include/RedEngine/Physics/: ContactInfo.hpp  PhysicsWorld.hpp
engine/include/RedEngine/Rendering/: Color.hpp  FrameBuffer.hpp  GPUBuffer.hpp  RenderDebugUtils.hpp  Renderer.hpp  RenderingEngine.hpp  RenderingModule.hpp  RenderingSystem.hpp  Text.hpp  Texture.hpp  Texture2D.hpp  Window.hpp
engine/include/RedEngine/Resources/: AnnimationDescriptor.hpp  Resource.hpp  ResourceEngine.hpp  ResourceHolderComponent.hpp  ResourceLoader.hpp
engine/include/RedEngine/Thread/: ExecutionGraph.hpp  Thread.hpp
engine/include/RedEngine/Utils/: BitfieldUtils.hpp  FileUtils.hpp  Random.hpp  StringUtils.hpp  SystemInfo.hpp  Types.hpp  TypesInfo.hpp  Uncopyable.hpp  UtilityModule.hpp
engine/include/RedEngine/components/: Mesh.hpp  RigidBody.hpp
engine/include/RedEngine/debug/: Debug.hpp  DebugBreak.hpp
engine/include/RedEngine/ecs/: Component.hpp  Entity.hpp  (+3 more)
engine/src/: Application.cpp  Configuration.cpp  Engine.cpp  Window.cpp
engine/src/Audio/: AudioUtils.cpp
engine/src/Core/: Application.cpp  Engine.cpp  SerializationFunction.cpp
engine/src/Event/: Delegate.cpp  EventSystem.cpp
engine/src/Filesystem/: File.cpp  Path.cpp
engine/src/Input/: InputDefinition.cpp  InputManager.cpp
engine/src/Level/: JsonLevelData.cpp  JsonLevelLoader.cpp  JsonLevelSerializer.cpp  Level.cpp  LevelChunk.cpp  LevelData.cpp  LevelLoader.cpp  LevelManager.cpp  LevelResourceLoader.cpp  LevelSerializer.cpp
engine/src/Math/: Hash.cpp  Math.cpp  Matrix.cpp  SerializationFunction.cpp  Vector.cpp
engine/src/Memory/: MemoryManager.cpp  MemoryProfiler.cpp  ObjectHandle.cpp
engine/src/Physics/: ContactInfo.cpp  PhysicsWorld.cpp
engine/src/Rendering/: Color.cpp  FrameBuffer.cpp  GPUBuffer.cpp  Renderer.cpp  RenderingEngine.cpp  RenderingSystem.cpp  Text.cpp  Texture.cpp  Texture2D.cpp  Window.cpp
engine/src/Resources/: Resource.cpp  ResourceEngine.cpp  ResourceHolderComponent.cpp  ResourceLoader.cpp
engine/src/Thread/: ExecutionGraph.cpp  Thread.cpp
engine/src/Utils/: FileUtils.cpp  Random.cpp  StringUtils.cpp  SystemInfo.cpp  Types.cpp  TypesInfo.cpp
engine/src/components/: Mesh.cpp  RigidBody.cpp
engine/src/ecs/: Component.cpp  ComponentManager.cpp  Entity.cpp  System.cpp  World.cpp
engine/src/engine/: RenderingEngine.cpp
engine/src/logger/: Logger.cpp
engine/src/memory/: AbstractAllocator.cpp  MemoryManager.cpp  MemoryProfiler.cpp  PoolAllocator.cpp
engine/src/systems/: RenderingSystem.cpp
templates/Pong/: CMakeLists.txt  imgui.ini
templates/Pong/RESOURCES/: BALL.JSON  BASEPIXEL.GLSL  BASEVERTEX.GLSL  BASE_GEOMETRY.JSON  BASE_MATERIAL.JSON  BASE_SHADER_PROGRAM.JSON  CONFIG.INI  PADDLE.JSON  PADDLE_SPRITESHEET.JSON  SERIALIZEDLEVEL.JSON  USERINPUT.INI
templates/Pong/resources/: BASEPIXEL.GLSL  BASEVERTEX.GLSL  BASE_GEOMETRY.JSON  BASE_MATERIAL.JSON  BASE_SHADER.JSON  ball_bouncing.json  config.ini  paddle.json  serializedLevel.json
templates/Pong/src/: BallComponent.hpp  DefaultLevel.cpp  DefaultLevel.hpp  GameControlSystem.cpp  GameControlSystem.hpp  GameLogicSystem.cpp  GameLogicSystem.hpp  PongEngine.cpp  PongEngine.hpp  PongLevel.cpp  PongLevel.hpp  ScoreComponent.hpp  main.cpp
templates/Simple/: CMakeLists.txt
templates/Simple/resources/: dice.mtl
templates/Simple/src/: CustomComponent.hpp  CustomSystem.cpp  CustomSystem.hpp  DefaultLevel.cpp  DefaultLevel.hpp  main.cpp
test/: CMakeLists.txt  callgrind.out.11789
test/RESOURCES/: CONFIG.INI
test/RESOURCES/SPRITE_TEST/: SPRITE_TEST.JSON
test/include/: EngineTest.hpp  LoggerTest.hpp  SignalTest.hpp  SystemTest.hpp  TestModule.hpp  logger_test.hpp  system_test.hpp
test/include/TestUtils/: TestUtils.hpp
test/resources/: config.ini
test/resources/sprite_test/: sprite_test.json
test/src/: ComponentTest.cpp  ECSTest.cpp  EngineTest.cpp  LoggerTest.cpp  SystemTest.cpp  WorldTest.cpp  logger_test.cpp  main.cpp  system_test.cpp  world_test.cpp
test/src/Configuration/: ConfigurationTest.cpp
test/src/Container/: ArrayTest.cpp  MapTest.cpp
test/src/Event/: DelegateTest.cpp  SignalTest.cpp
test/src/FileSystem/: FileSystem.cpp
test/src/Input/: InputTest.cpp
test/src/Level/: LevelTest.cpp  LevelTest.hpp
test/src/Math/: MatrixFunction.cpp  MatrixTest.cpp
test/src/Memory/: MemoryAllocatorTest.cpp  MemoryProfilerTest.cpp
test/src/Physics/: PhysicsTest.cpp
test/src/Rendering/: SpriteTest.cpp
test/src/Resources/: ResourceTest.cpp
test/src/System/: SystemTest.cpp
test/src/TestUtils/: TestUtils.hpp
test/src/Thread/: ExecutionGraphTest.cpp  ThreadTest.cpp
test/src/Utils/: StringUtilsTest.cpp  TypesInfoTest.cpp
(+289 files in other folders)
